<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- This is the placeholder for the specific content of each activity -->
    <FrameLayout
        android:id="@+id/activity_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:id="@+id/top_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:padding="16dp"
        android:visibility="gone"> <!-- Initially hidden -->

        <!-- Search bar for searching users by pseudo -->
        <EditText
            android:id="@+id/search_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Search by pseudo"
            android:drawableStart="@drawable/ic_search"
            android:padding="8dp"
            android:background="@android:color/darker_gray"/>

        <!-- RecyclerView to show the search results -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <!-- Bottom menu bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#000000"
        android:padding="2dp"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/messages_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/messages_description"
            android:padding="8dp"
            android:src="@drawable/messages"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/plus_description"
            android:padding="8dp"
            android:src="@drawable/plus"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/home_description"
            android:padding="8dp"
            android:src="@drawable/logo"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/custom_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/custom_description"
            android:padding="8dp"
            android:src="@drawable/ic_custom_pin"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/profile_description"
            android:padding="8dp"
            android:src="@drawable/ic_profile_pin"
            android:scaleType="centerInside" />
    </LinearLayout>
</FrameLayout>
